# mcp-seniverse-weather

./: pyproject.toml
mcp_seniverse_weather/: __init__.py  __main__.py  server.py
