[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-seniverse-weather"
version = "1.0.0"
description = "Weather Forecast MCP Server Powered by Seniverse"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-seniverse-weather = "mcp_seniverse_weather:main"
